[package]
name = "my_crates"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web="4"
tokio={version="1", features=["full"]}
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "macros", "chrono", "uuid", "json"] }
chrono = {version="0.4", features=["serde"]}